[tool.poetry]
name = "deep-learning-lecture"
version = "0.1.0"
description = "Deep learning assignements of the university of Tübingen."
authors = ["Tom Freudenmann <tom.freudenmann@outlook.de>"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
pandas = "^2.1.3"
sympy = "^1.12"
torch = {version = "^2.1.1+rocm5.6", source = "pytorch-rocm5"}
torchvision = {version = "^0.16.1+rocm5.6", source = "pytorch-rocm5"}
ipykernel = "^6.27.1"
graphviz = "^0.20.1"
scikit-learn = "^1.3.2"


[[tool.poetry.source]]
name = "pytorch-rocm5"
url = "https://download.pytorch.org/whl/rocm5.6"
priority = "explicit"


[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
