[tool.poetry]
name = "deep-learning-lecture"
version = "0.1.0"
description = "Deep learning assignements of the university of Tübingen."
authors = ["Tom Freudenmann <tom.freudenmann@outlook.de>"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
pandas = "^2.1.3"
sympy = "^1.12"
ipykernel = "^6.27.1"
graphviz = "^0.20.1"
scikit-learn = "^1.3.2"
h5py = "^3.10.0"
imgaug = "^0.4.0"
tqdm = "^4.66.1"
opencv-python = "^4.9.0.80"

[build-system]
requires = ["poetry-core", "torch", "torchvision"]
build-backend = "poetry.core.masonry.api"
